force-app/main/default/objects/KB_Scan_Config__c/KB_Scan_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores scan configuration thresholds, batch sizes, and general scan behavior settings. Editable via Admin Setup Wizard.</description>
    <label>KB Scan Configuration</label>
</CustomObject>