force-app/main/default/objects/KB_Scan_Config__c/fields/Content_Field_Mapping_JSON__c.field-meta.xml
<CustomField>
    <fullName>Content_Field_Mapping_JSON__c</fullName>
    <description>Comma-separated Knowledge__kav field API names for article body content. Empty = auto-discovery.</description>
    <inlineHelpText>Admin-selected content fields. Example: FAQ_Answer__c,KCSArticle_Resolution__c. Leave blank for auto-detection.</inlineHelpText>
    <label>Content Field Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>