force-app/main/default/objects/KB_Scan_Config__c/fields/Freshness_Critical_Months__c.field-meta.xml
<CustomField>
    <fullName>Freshness_Critical_Months__c</fullName>
    <defaultValue>24</defaultValue>
    <description>Articles older than this number of months will score 0 for freshness.</description>
    <inlineHelpText>Articles older than this critical threshold score 0 for freshness. Default: 24 months.</inlineHelpText>
    <label>Freshness Critical Threshold (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>