force-app/main/default/objects/KB_Scan_Config__c/fields/Freshness_Threshold_Months__c.field-meta.xml
<CustomField>
    <fullName>Freshness_Threshold_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Articles older than this number of months will be penalized in freshness scoring.</description>
    <inlineHelpText>Articles older than this threshold receive lower freshness scores. Default: 12 months.</inlineHelpText>
    <label>Freshness Threshold (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>