force-app/main/default/objects/KB_Scan_Config__c/fields/Max_Scoring_Shards__c.field-meta.xml
<CustomField>
    <fullName>Max_Scoring_Shards__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Routing (Batch tier only): maximum number of parallel batch shards a large scoring run is split into once Shard_Threshold__c is reached. The router caps the effective value at 5 (the platform limit on concurrently-running batch jobs) regardless of the admin-set value. Blank/0 falls back to the default of 5.</description>
    <label>Max Scoring Shards</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>