force-app/main/default/objects/KB_Scan_Config__c/fields/Min_Title_Length__c.field-meta.xml
<CustomField>
    <fullName>Min_Title_Length__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Minimum character length required for article title quality.</description>
    <inlineHelpText>Titles shorter than this are flagged as low quality. Default: 10 characters.</inlineHelpText>
    <label>Minimum Title Length</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>