force-app/main/default/objects/KB_Scan_Config__c/fields/Queueable_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of articles to process per Queueable execution. Balances throughput vs the 10-minute Apex async transaction limit. Each LLM-using dimension adds ~5s/article, so larger batches risk transaction timeouts on hybrid scoring.</description>
    <inlineHelpText>Articles processed per async batch. Recommended range: 5-25 for hybrid scoring (LLM enabled), 25-100 for deterministic-only. Default: 10.</inlineHelpText>
    <label>Queueable Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>