force-app/main/default/objects/KB_Scan_Config__c/fields/Queueable_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Queueable_Threshold__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Routing: article counts above Sync_Threshold__c and at or below this use the queueable fan-out tier (one queueable per dimension, one hop each). Above this the Batch Apex tier runs. When LLM mode is on, the router caps the effective value at 50 regardless of the admin-set value, to stay within the 100-callout governor budget.</description>
    <label>Queueable Threshold (articles)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>