force-app/main/default/objects/KB_Scan_Config__c/fields/Shard_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Shard_Threshold__c</fullName>
    <defaultValue>51</defaultValue>
    <description>Routing (Batch tier only): at or above this article count the Batch Apex scoring run is split into parallel shards (up to Max_Scoring_Shards__c concurrent batch jobs) instead of one serial batch. Below it, a single batch runs. Default 51 shards any run that reaches the Batch tier (runs of 50 or fewer use the queueable tier). The 5-job overhead is negligible, so shard aggressively for speed; raise this toward 100+ if your org runs many concurrent batch jobs and you want mid-size runs to hold a single batch slot. Blank/0 falls back to 51.</description>
    <label>Shard Threshold (articles)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>