force-app/main/default/objects/KB_Scan_Config__c/fields/Sync_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Sync_Threshold__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Routing: article counts at or below this run synchronously in-request. Default 10 keeps LWC wait under browser timeout.</description>
    <label>Sync Threshold (articles)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>