force-app/main/default/objects/KB_Scan_Config__c/fields/Uses_Data_Categories__c.field-meta.xml
<CustomField>
    <fullName>Uses_Data_Categories__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, articles without data categories are scored as a Completeness issue. When false, missing categories are informational only. Reflects whether data categories are part of the org's Knowledge governance (visibility, scoped retrieval), not a property of any specific retriever.</description>
    <inlineHelpText>Turn on if your Knowledge implementation uses data categories. When on, articles without a category will be flagged as incomplete. When off, missing categories are noted but not penalised.</inlineHelpText>
    <label>Do you use data categories</label>
    <type>Checkbox</type>
</CustomField>